Fix: update button colors and styles for better visibility; adjust email error message for clarity

--- a/css/style-part-1.css
+++ b/css/style-part-1.css
@@ -317,19 +317,19 @@ footer p {
 
 .translate-buttons button:active {
     background-color: #70e61c;
-    color: #141d2f;
+    color: #ffffff;
     border: none !important;
 }
 
 .translate-buttons button.is-active {
     background-color: #70e61c;
-    color: #141d2f;
+    color: #ffffff;
     border: none !important;
 }
 
 .translate-buttons button:hover {
     background-color: #9747ff;
-    color: #141d2f;
+    color: #ffffff;
 }
 
 .profile-img {
